--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyApp</title>
+  <title>Portfolio Personal</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <script src="https://kit.fontawesome.com/9126ea5e03.js" crossorigin="anonymous"></script>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet"> 
+
+  <link rel="preload" href="styles.css" as="style">       <!-- Maneja mejor la performance -->
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
