--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
   <!-- <link rel="icon" type="image/x-icon" href="MAIN.ico"> -->
   
   <script src="https://kit.fontawesome.com/9126ea5e03.js" crossorigin="anonymous"></script>
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;600;700&display=swap" rel="stylesheet"> 
 
   <link rel="preload" href="styles.css" as="style">       <!-- Maneja mejor la performance -->
   <link href="styles.css" rel="stylesheet">
